<resources>
    <string name="app_name">AnimeMovies</string>
    <string name="review_author">Автор отзыва: </string>
    <string name="review_type">Тип отзыва: </string>
    <string name="start_trailers">Трейлеры:</string>
    <string name="start_reviews">Отзывы:</string>
    <string name="menu_favorite_movies_title">Избранное</string>
    <string name="empty_error">Мы делаем всё возможное, чтобы вы увидели любимые фильмы :)</string>
    <string name="empty_favorites_movie">Вы пока ничего не добавили :)</string>
    <string name="error_template">Ошибка:</string>
    <string name="title_button_try_again">Попробовать снова</string>
    <string name="internet_error">Нет подключения к Интернету</string>
    <string name="access_denied_error">Доступ запрещён</string>
    <string name="unknown_error">Произошла неизвестная ошибка</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="timeout_error">Ошибка времени ожидания запроса</string>
    <string name="nullpointer_error">Тут ничего нет :)</string>
</resources>