<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MovieDetailActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageViewPoster"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@null"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/imageViewPoster"
            tools:text="Title" />

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            tools:text="2002" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/textViewYear"
            tools:text="Description of movie" />

        <TextView
            android:id="@+id/textViewStartTrailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/start_trailers"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription" />

        <LinearLayout
            android:id="@+id/linearLayoutEmptyTrailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStartTrailers"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/imageViewEmptyTrailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_red"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/icon_empty_trailers_reviews" />

            <TextView
                android:id="@+id/textViewErrorTrailers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:textAlignment="center"
                android:textStyle="italic"
                tools:text="@string/error_template" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewTrailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmptyTrailers"
            tools:listitem="@layout/trailer_item" />

        <TextView
            android:id="@+id/textViewStartReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/start_reviews"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewTrailers" />

        <LinearLayout
            android:id="@+id/linearLayoutEmptyReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStartReviews"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/imageViewEmptyReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/circle_red"
                android:contentDescription="@null"
                android:padding="8dp"
                android:src="@drawable/icon_empty_trailers_reviews" />

            <TextView
                android:id="@+id/textViewErrorReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                android:textAlignment="center"
                android:textStyle="italic"
                tools:text="@string/error_template" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewReviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutEmptyReviews"
            tools:listitem="@layout/review_item" />

        <ImageView
            android:id="@+id/imageViewLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/circle_green"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="@id/imageViewPoster"
            app:layout_constraintEnd_toEndOf="@id/imageViewPoster"
            tools:srcCompat="@drawable/icon_before_add_to_favorite" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>